kubernetes/apps/observability/exporters/unpoller/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: unpoller
spec:
  description: "Network policy for Unpoller (UniFi metrics exporter)"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: unpoller
  ingress:
    # Allow prometheus scraping
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "9130"
              protocol: TCP
  egress:
    # Allow same namespace traffic
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
    # Allow access to UniFi controller (in home-system)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
